--- a/interface/templates/home.html
+++ b/interface/templates/home.html
@@ -4,7 +4,6 @@
 
 
 {% block conteudo %} 
-    <h1 class="text-center">Bem vindo ao Banco de Series</h1>
 
 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
@@ -35,7 +34,13 @@
                     <div class="thumbnail"><a href="4"><img src="{% static "img/capa1.jpg" %}" alt="..." class="img-thumbnail"></a>
                     </div>
                     </td>         
-                    <td>
+                </tr>
+            </table>
+    </div>
+    <div class="item">
+    <table>
+        <tr>
+             <td>
                     <div class="thumbnail"><a href="5"><img src="{% static "img/capa1.jpg" %}" alt="..." class="img-thumbnail"></a>
                     </div>
                     </td>        
@@ -51,11 +56,8 @@
                     <div class="thumbnail"><a href="6"><img src="{% static "img/capa1.jpg" %}" alt="..." class="img-thumbnail"></a>
                     </div>
                     </td>
-                </tr>
-            </table>
-    </div>
-    <div class="item">
-
+        </tr>
+    </table>
     </div>
       </div>
 
@@ -69,4 +71,10 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
+
+      <div class="jumbotron" style="text-align: center;">
+        <h1>Banco de Series!!</h1>
+        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+        <p><a class="btn btn-lg btn-success" href="#" role="button">Cadastre-se</a></p>
+      </div>
 {% endblock %}
